[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/card.png" type="Texture" id=1]
[ext_resource path="res://Main/Shop/Card.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Big.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/bullet.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Hovered"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1.86607 ),
"update": 0,
"values": [ 0.0, 3.0, 0.0, -3.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Card" type="TextureButton"]
anchor_right = 0.078
margin_left = 1.58734
margin_right = 104.715
margin_bottom = 273.0
rect_pivot_offset = Vector2( 87.1607, 127.23 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 6.44409
margin_top = 282.143
margin_right = 168.444
margin_bottom = 386.143
custom_fonts/font = ExtResource( 3 )
text = "+ 5 HP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldContainer" type="HBoxContainer" parent="."]
margin_left = 4.06297
margin_top = -58.3542
margin_right = 126.063
margin_bottom = -12.3542
rect_scale = Vector2( 1.36, 1.16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GoldContainer"]
modulate = Color( 1.2, 1.2, 0.17, 1 )
margin_top = 12.0
margin_right = 21.0
margin_bottom = 33.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="GoldLabel" type="Label" parent="GoldContainer"]
modulate = Color( 1, 0.964706, 0.0588235, 1 )
margin_left = 25.0
margin_right = 122.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "2 Gold"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hovered = SubResource( 2 )
anims/Idle = SubResource( 1 )

[node name="Behavior" type="Node" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
